--- a/Domination/nbproject/project.properties
+++ b/Domination/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.guava-14.0-rc1.jar=lib/guava-14.0-rc1.jar
 file.reference.httpcore-4.1.2.jar=lib/httpcore-4.1.2.jar
 file.reference.httpmime-4.1.2.jar=lib/httpmime-4.1.2.jar
 file.reference.jnlp.jar=lib/jnlp.jar
+file.reference.jxl.jar=lib/jxl.jar
 file.reference.LobbyClient.jar=lib/LobbyClient.jar
 file.reference.LobbyServer.jar=lib/LobbyServer.jar
 file.reference.midletrunner.jar=lib/midletrunner.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.SwingME.jar}:\
     ${file.reference.httpmime-4.1.2.jar}:\
     ${file.reference.httpcore-4.1.2.jar}:\
-    ${file.reference.guava-14.0-rc1.jar}
+    ${file.reference.guava-14.0-rc1.jar}:\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
