--- a/Domination/nbproject/private/private.properties
+++ b/Domination/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/afs/inf.ed.ac.uk/user/s09/s0914007/.netbeans/7.2/build.properties
+user.properties.file=C:\\Users\\s0914007\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
